0022960: Memory leak in Xw_get_env.cxx